View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022704 | Open CASCADE | OCCT:Visualization | public | 2011-08-18 12:03 | 2012-03-29 17:26 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022704: A method defining TKOpenGl.dll for Open CASCADE visualization toolkit not using GraphicShr variable. | ||||
Description | Different modules of an application may use different redefined TkOpenGl libraries (redefined because of usage of user-draw technology, for example). But the environment variable CSF_GraphicShr points to only one such a library... The problem is easily solved by additional of a new constructor of Graphic3d_WNTGraphicDevice, which obtains a reference (path) to the redefined library. | ||||
Steps To Reproduce | It requires specific environment (at least 2 modules, which use 2 different redefined TKOpenGl libraries). | ||||
Additional information and documentation updates | A new constructor is added to Graphic3d_WNTGraphicDevice, which obtains a path to visualization plug-in library (TKOpenGl.dll or a redefined one). | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Revise the bug please. 2 files were modified: Graphic3d_WNTGraphicDevice.cdl (added a constructor and a method SetGraphicDevice()) Graphic3d_WNTGraphicDevice.cxx (implementation of added methods). |
|
Sergey, Fix is revised from 2011-08-18 16:58 (1 Month) |
|
It would be more reasonable if Kirill or Sergey (SAN) would reviewed it. |
|
Branch http://svn/svn/occt/branches/0022704 was reviewed. >>void Graphic3d_WNTGraphicDevice::SetGraphicDriver (const Standard_CString graphicLib); This function - is a code duplication. Please reuse the code - move common functionality into ::SetGraphicDriver (const Standard_CString graphicLib) method and reuse it in ::SetGraphicDriver() without arguments. Please fix this. |
|
Vlad, Issue was reviewed with remarks 2011-09-20. Please update branch in accoardance with remarks of KGV |
|
The code duplication is removed. Thank you! :-) |
|
2vro, French->English translation of comments was lost (due to initial code duplication). This issue was fixed and integrated to Bug branch with coding rules cosmetics applied. Dear Bugmaster, please perform tests of bug branch and integrate. |
|
Dear BugMaster, Workbench KAS:dev:aan-22704-occt from SVN branch http://svn/svn/occt/branches/0022704 (and aan-22704-products from trunk) was successfully compiled on Linux and Windows platforms, and tested on Linux and Windows platforms. There are not regressions in aan-22704-products regarding to KAS:dev:products-20120127-opt See results in /QADisk/occttests/results/KAS/dev/aan-22704-products_02022012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120127-opt_28012012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into trunk of occt repository Date: 2012-02-03 15:16:44 +0400 (Fri, 03 Feb 2012) New Revision: 10294 Modified: trunk/src/Graphic3d/Graphic3d_WNTGraphicDevice.cdl trunk/src/Graphic3d/Graphic3d_WNTGraphicDevice.cxx |
occt: master 6ff13c92 2012-02-03 11:16:44 Roman Lygin, ABV Committer: bugmaster Details Diff |
0022704: A method defining TKOpenGl.dll for Open CASCADE visualization toolkit not using GraphicShr variable. |
Affected Issues 0022704 |
|
mod - src/Graphic3d/Graphic3d_WNTGraphicDevice.cdl | Diff File | ||
mod - src/Graphic3d/Graphic3d_WNTGraphicDevice.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-08-18 12:03 | vro | New Issue | |
2011-08-18 12:03 | vro | Assigned To | => vro |
2011-08-18 16:58 | vro | Note Added: 0018004 | |
2011-08-18 16:58 | vro | Assigned To | vro => szy |
2011-08-18 16:58 | vro | Status | new => assigned |
2011-09-13 15:58 | bugmaster | Note Added: 0018132 | |
2011-09-20 16:57 |
|
Note Added: 0018225 | |
2011-09-20 16:57 |
|
Assigned To | szy => kgv |
2011-09-20 16:57 |
|
Status | assigned => feedback |
2011-09-20 17:26 | kgv | Note Added: 0018228 | |
2011-09-20 17:26 | kgv | Assigned To | kgv => vro |
2011-09-20 17:26 | kgv | Status | feedback => assigned |
2012-01-10 15:50 | bugmaster | Note Added: 0019072 | |
2012-02-01 16:59 | vro | Note Added: 0019335 | |
2012-02-01 16:59 | vro | Assigned To | vro => kgv |
2012-02-01 16:59 | vro | Status | assigned => resolved |
2012-02-02 12:43 | kgv | Note Added: 0019347 | |
2012-02-02 12:43 | kgv | Assigned To | kgv => bugmaster |
2012-02-02 12:43 | kgv | Status | resolved => reviewed |
2012-02-03 13:03 |
|
Note Added: 0019377 | |
2012-02-03 13:03 |
|
Status | reviewed => tested |
2012-02-03 14:04 | bugmaster | Target Version | => 6.5.3 |
2012-02-03 15:37 | bugmaster | Note Added: 0019382 | |
2012-02-03 15:37 | bugmaster | Status | tested => verified |
2012-02-03 15:37 | bugmaster | Resolution | open => fixed |
2012-02-03 15:37 | bugmaster | Assigned To | bugmaster => abv |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 6ff13c92 |