0022704: A method defining TKOpenGl.dll for Open CASCADE visualization toolkit not using GraphicShr variable.